--- a/server/templates/toilet_view_template.html
+++ b/server/templates/toilet_view_template.html
@@ -4,10 +4,38 @@
 <head>
 	<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 	<title>Chartjs Charts</title>
+
+	    <style>
+			.box {
+		width: 500px;  /* Set the desired width of the box */
+		height: 400px; /* Set the desired height of the box */
+		overflow: hidden; /* This will hide any overflow content inside the box */
+		position: relative; /* Make the box a positioned container for the image */
+		border: 2px solid black; /* Add a black border with 2px width */
+	}
+        .image {
+        position: absolute;
+		width: {{100*100}}px;  /* Ensure the image takes up the full width of the box */
+		transform: translate(-{{ toilet.x -0.5}}%, -{{ toilet.y - 3.5+toilet.height/2}}%);
+		height: auto; /* Maintain the aspect ratio of the image */
+		object-fit: cover; /* This makes the image cover the box, cropping it if necessary */
+	}
+
+        /* The image inside the container */
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            display: block;
+        }
+    </style>
 </head>
 
 <body>
-	<h>{{toilet_name}}</h>
+	<h>{{toilet.name}}</h>
+	<div class="box">
+    <img src="{{ '/' + toilet.parent.svg_path }}" alt="Image inside box" class="image">
+	</div>
+
 	<div style="height: 50vh; width: 50%;">
 		<canvas id="myChart"></canvas>
 	</div>
