--- a/server/templates/overview_template.html
+++ b/server/templates/overview_template.html
@@ -24,8 +24,8 @@
         /* The overlay rectangle */
         .overlay-rectangle {
             position: absolute;
-            border: 2px solid #ff0000;  /* Rectangle border color */
-            background-color: rgba(255, 0, 0, 0.3); /* Semi-transparent background */
+<!--            border: 2px solid #ff0000;  /* Rectangle border color */-->
+<!--            background-color: rgba(255, 0, 0, 0.3); /* Semi-transparent background */-->
         }
 
       .tooltip {
@@ -57,7 +57,7 @@
 
         {% for toilet in floor %}
         <div class="tooltip">
-        <a href={{request.base_url + "/" + toilet.name}} class="overlay-rectangle" style="left: {{toilet.x}}%; top: {{toilet.y}}%; width: {{toilet.width}}%; height: {{toilet.height}}%;"></a>
+        <a href={{request.base_url + "/" + toilet.name}} class="overlay-rectangle" style="left: {{toilet.x}}%; top: {{toilet.y}}%; width: {{toilet.width}}%; height: {{toilet.height}}%;border: 2px solid #ff0000; background-color: {{color_mapping(toilet.visits/(1+floor.visits))}};"></a>
         <span class="tooltiptext" style="left:{{toilet.x + toilet.width + 1}}%; top:{{toilet.y}}%; width:150px">
             {{toilet.name}}<br>
             visits:&nbsp;&nbsp;&nbsp; {{toilet.visits}}<br>
