--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -56,6 +56,7 @@
             <a href="/">Home</a>
             <a href="/about">About</a>
         </div>
+        {% block header%}{% endblock %}
     </header>
 
     <main>
